fix bio overflowing when in mobile page

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
 
 .container {
   display: flex;
@@ -8,7 +8,6 @@
   /* height: 100%; */
   flex-direction: column;
   position: relative;
-
 }
 
 .foreground {
@@ -18,10 +17,9 @@
   justify-content: center;
   align-items: center;
   padding-left: 40px;
-  
 }
 
-.welcome{
+.welcome {
   color: #c2c2c2;
   font-size: 1.25rem;
   font-weight: 300;
@@ -35,11 +33,10 @@
   font-weight: 500;
   margin-bottom: 0.5rem;
   text-align: center;
-;
 }
 
 .bio {
-  width: max-content;
+  width: 100%;
   color: #eee;
   font-size: 2rem;
   font-weight: 300;
@@ -50,7 +47,7 @@
 
 .bio::before,
 .bio::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -67,7 +64,8 @@
   margin-left: 0.4rem;
   width: 0.125em;
   background: var(--accent-color);
-  animation: typewriter 2.5s steps(24) 500ms forwards,
+  animation:
+    typewriter 2.5s steps(24) 500ms forwards,
     blink 750ms steps(24) infinite;
 }
 
@@ -104,7 +102,7 @@
   font-size: 1.25rem;
   padding: 0.5rem 1rem;
   color: #eee;
-  border: 2px solid 	var(--accent-color);
+  border: 2px solid var(--accent-color);
   background: transparent;
   cursor: pointer;
 }
